--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,6 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="%PUBLIC_URL%/layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
     <title>React App</title>
@@ -26,6 +22,7 @@
   <script src="%PUBLIC_URL%/layout/scripts/jquery.min.js"></script>
   <script src="%PUBLIC_URL%/layout/scripts/jquery.backtotop.js"></script>
   <script src="%PUBLIC_URL%/layout/scripts/jquery.mobilemenu.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <!-- Homepage specific -->
   <script src="%PUBLIC_URL%/layout/scripts/jquery.easypiechart.min.js"></script>
   <!-- / Homepage specific -->
