removed unnecessary files, added styles for sign in sign up page

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Universal document converter"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
     <link href="%PUBLIC_URL%/layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-    <title>React App</title>
+    <title>UDC</title>
   </head>
   <body id="top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -22,8 +22,4 @@
   <script src="%PUBLIC_URL%/layout/scripts/jquery.min.js"></script>
   <script src="%PUBLIC_URL%/layout/scripts/jquery.backtotop.js"></script>
   <script src="%PUBLIC_URL%/layout/scripts/jquery.mobilemenu.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <!-- Homepage specific -->
-  <script src="%PUBLIC_URL%/layout/scripts/jquery.easypiechart.min.js"></script>
-  <!-- / Homepage specific -->
 </html>
