fixed existing and added new styles

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,13 @@
       content="Universal document converter"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--fonts-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+    
+    <!--main css-->
     <link href="%PUBLIC_URL%/layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+    
     <title>UDC</title>
   </head>
   <body id="top">
